--- a/src/app/public/sites/register/register.component.html
+++ b/src/app/public/sites/register/register.component.html
@@ -9,10 +9,7 @@
       <div class="mb-4">
         <span class="flex">
           <div class="w-8/12">
-            <h1 class="font-extrabold">BIENVENIDO!</h1><br>
-          </div>
-          <div class="w-4/12">
-            <a href="/"><img class="h-12" src="./assets/logo.png"></a>
+            <h1 class="font-extrabold">BIENVENIDO!</h1>
           </div>
         </span>
 
@@ -62,8 +59,8 @@
         </span>
         <div class="text-center">
           <button type="submit" (click)="onRegisterClick()"
-            class="mb-4 p-2 text-white rounded bg-amber-400">Registrate</button><br>
-          <a class="mb-4 text-blue-600 underline" routerLink="../login">Ir a Inicio de Sesión</a>
+            class="mb-4 p-2 text-white rounded bg-amber-400 hover:bg-white hover:text-black">Registrate</button><br>
+          <a class="mb-4 text-blue-600 underline" routerLink="/login">Iniciar Sesión</a>
         </div>
       </div>
     </form>
