--- a/src/app/public/sites/home/home.component.html
+++ b/src/app/public/sites/home/home.component.html
@@ -1,32 +1,30 @@
-<nav class="bg-blue-900 p-4 flex justify-between items-center">
+<nav class="bg-teal-800 p-4 flex justify-between items-center" style="height:45px;">
   <!-- Logo a la izquierda -->
   <div class="flex items-center">
-    <img src="assets/imagen.png" alt="Logo" class="h-14 w-auto mr-2" height="86" width="219" routerLink="/">
+    <img src="assets/newlogo.jpeg" alt="Logo" class="h-14 w-auto mr-2" style="height: 50px; width: 70px">
   </div>
 
   <!-- Elementos a la derecha -->
   <div class="flex items-center space-x-4">
-    <a routerLink="/register" class="text-white">Regístrate</a>
-    <a routerLink="/login" class="text-white border-2 border-white p-2">Iniciar Sesión</a>
+    <a routerLink="/register" class="text-white" style="font-size: 14px">Regístrate</a>
+    <a routerLink="/login" class="text-white" style="font-size: 14px; color: rgb(17, 100, 67); background-color: white ; border-radius: 20px; width: 100px; text-align: center;padding: 5px;">Iniciar Sesión</a>
 
   </div>
 </nav>
+<head>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+</head>
 <body>
 <div style="position: relative;">
-  <div class="w-557 h-418 mx-auto mt-0" style="margin-bottom: auto">
-    <img src="assets/fondo1ro.png" alt="Imagen debajo del navbar" class="w-full h-full object-cover" />
+  <div class="w-557 h-418 mx-auto mt-0" style="margin-bottom: auto; height: 600px;">
+    <img src="assets/fondo1ro.png" alt="Imagen debajo del navbar" class="w-full h-full object-cover"/>
 
     <div class="absolute inset-0 flex items-center justify-left p-20 text-white text-left" >
 
       <div class="" style="margin-top: -100px">
-        <h1 class="text-7xl font-bold mb-2 " style="margin-bottom: auto; letter-spacing:-2px">Vive experiencias</h1>
-        <h1 class="text-7xl font-bold mb-2" style="margin-bottom: auto; letter-spacing:-2px">inolvidables y conoce</h1>
-        <h1 class="text-7xl font-bold mb-2" style="margin-bottom: auto; letter-spacing:-2px" >a personas increibles</h1>
-        <p class="text-lg" style="margin-bottom: -8px">Nuestro compromiso es llevarte a aventuras extraordinarias, </p>
-        <p class="text-lg" style="margin-bottom: -8px">conectar con destinos fascinantes y enriquecer tu vida a través de </p>
-        <p class="text-lg" style="margin-bottom: -8px">experiencias de viaje inolvidables.  </p>
-        <button class="bg-blue-500text-white font-bold py-2 px-4  rounded-full mt-4" style="background-color: #204480">
-          Hazte miembro
+        <h1 class="text-7xl font-bold mb-2 " style="font-size: 80px;">VIVE EXPERIENCIAS INOLVIDABLES<br></h1>
+        <p class="text-lg" style="font-size:15px">Nuestro compromiso es llevarte a aventuras extraordinarias, conectar con destinos fascinantes y enriquecer tu vida a través de experiencias de viaje inolvidables. </p>
+        <button class="bg-teal-800 text-white py-2 px-4  rounded-full mt-4" style="background-color:rgb(17, 100, 67); font-size:13px; padding:8px 40px"><a routerLink="/register">Hazte mienbro</a>
         </button>
       </div>
     </div>
@@ -34,36 +32,36 @@
 </div>
 
 <div class="w-757 h-196 border-2 p-20">
-  <h1 class="text-7xl font-bold mb-2 " style="margin-bottom: auto; letter-spacing:-2px; color: #204480">Sobre nosotros</h1>
-  <p class="text-lg" style="margin-bottom: -8px; color: #204480">En nuestra comunidad, fomentamos la colaboración y el intercambio de información. Ya sea que estés buscando recomendaciones sobre destinos, consejos sobre cómo planificar un viaje, o historias emocionantes de viajes pasados, estamos aquí para ayudarte. Nuestros miembros tienen experiencias diversas, desde mochileros que recorren el mundo con un presupuesto ajustado hasta viajeros de lujo que buscan experiencias exclusivas. </p>
+  <h1 class="text-7xl mb-2 " style="margin-bottom: auto; letter-spacing:-2px; color:black;text-align:center; font-size:40px; ">SOBRE NOSOTROS</h1>
+  <p class="text-lg" style="margin-bottom: -8px; color:black; text-align:center; font-size:12px">En nuestra comunidad, fomentamos la colaboración y el intercambio de información. Ya sea que estés buscando recomendaciones sobre destinos, consejos sobre cómo planificar un viaje, o historias emocionantes de viajes pasados, estamos aquí para ayudarte. Nuestros miembros tienen experiencias diversas, desde mochileros que recorren el mundo con un presupuesto ajustado hasta viajeros de lujo que buscan experiencias exclusivas. </p>
 </div>
 
 
 <div class="p-6" style="background-color: #F5A80F">
-  <div class="flex justify-center items-center  " style=" " >
+  <div class="flex justify-center items-center" >
 
     <div class="text-white text-center  mx-7">
-      <img src="assets/Descubre.png" alt="Descripción de la imagen 1" class="w-28 h-auto mx-auto mb-1">
-      <h2 class="text-lg font-bold">DESCUBRE UN DESTINO</h2>
+      <img src="assets/Descubre.png" alt="Descripción de la imagen 1" class="w-8 h-auto mx-auto mb-1">
+      <h2 class="text-lg font-bold" style="font-size: 8px">DESCUBRE UN DESTINO</h2>
     </div>
 
 
     <div class="text-white text-center  mx-7 ">
-      <img src="assets/Planea.png" alt="Descripción de la imagen 2" class="w-28 h-auto mx-auto mb-1">
-      <h2 class="text-lg font-bold">PLANEA UN VIAJE</h2>
+      <img src="assets/Planea.png" alt="Descripción de la imagen 2" class="w-8 h-auto mx-auto mb-1">
+      <h2 class="text-lg font-bold" style="font-size: 8px">PLANEA UN VIAJE</h2>
     </div>
 
 
     <div class="text-white text-center  mx-7 ">
-      <img src="assets/Recibe%20consejos.png" alt="Descripción de la imagen 3" class="w-28 h-auto mx-auto mb-1">
-      <h2 class="text-lg font-bold">RECIBE CONSEJOS</h2>
+      <img src="assets/Recibe%20consejos.png" alt="Descripción de la imagen 3" class="w-8 h-auto mx-auto mb-1">
+      <h2 class="text-lg font-bold" style="font-size: 8px">RECIBE CONSEJOS</h2>
     </div>
   </div>
 </div>
 
 <div class="w-757 h-196 border-2 p-20">
-  <h1 class="text-7xl font-bold mb-2 " style="letter-spacing:-2px; color: #204480">Lugares y tips</h1>
-  <p class="text-lg" style="margin-bottom: -8px; color: #204480">Algunos usuarios creen que podrías disfrutar estas cosas para darte una escapada en tus vacaciones </p>
+  <h1 class="text-7xl font-bold mb-2 " style="margin-left: -20px;letter-spacing:-2px; color: black; font-size: 40px;text-align:start; display:flex; flex-wrap: start;">Lugares y tips</h1>
+  <p class="text-lg" style="margin-left: -20px;margin-bottom: -8px; color: black">Algunos usuarios creen que podrías disfrutar estas cosas para darte una escapada en tus vacaciones </p>
   <div class="flex flex-row">
 
 
@@ -176,7 +174,7 @@
           </h5>
         </div>
         <p class="block font-sans text-base antialiased font-light leading-relaxed text-gray-700">
-          Estuve por el Australia y es increible, recomiendo mucho tomarse fotos en la Opera House de Sídne
+          Estuve por el Australia y es increible, recomiendo mucho tomarse fotos en la Opera House de Sídney
         </p>
 
       </div>
@@ -187,27 +185,26 @@
 <div class="p-20" style="background-color: #F5A80F">
   <div class="flex justify-center items-center m-18">
     <div class="text-center mx-4">
-      <h1 class="text-2xl font-bold text-white" style="font-size: 55px; margin-bottom: 14px">Únete a nuestra comunidad</h1>
-      <h1 class="text-2xl font-bold text-white" style="font-size: 55px">de viajeros</h1>
+      <h1 class="text-2xl font-bold text-white" style="font-size: 30px; margin-bottom: 14px">Únete a nuestra comunidad de viajeros</h1>
       <div class="mt-5">
-        <p class="text-white" style="margin-bottom: -8px">"Desde que me uní a I Love Travel, he descubierto destinos increíbles y he</p>
-        <p class="text-white" style="margin-bottom: -8px">hecho amigos de todo el mundo. No puedo esperar para seguir explorando con esta comunidad." - Violet Green</p>
-        <p class="text-white">con esta comunidad." - Violet Green</p>
+        <p class="text-white" style="margin-bottom: -8px">"Desde que me uní a Viajeros Sin Fronteras, he descubierto destinos increíbles y hecho amigos de todo el mundo. No puedo esperar para seguir explorando con esta comunidad."<br>- Violet Green</p>
       </div>
 
-      <button class=" text-white py-2 px-4 rounded-full mt-2 hover:bg-blue-700 focus:outline-none focus:shadow-outline-blue active:bg-blue-800" style="background-color: #204480" type="button">Únete ahora</button>
+      <button class=" text-white border-2 border-white py-2 px-4 rounded-full mt-2 hover:bg-White focus:outline-none focus:shadow-outline-blue active:bg-teal-800" style="background-color:transparent; margin: 25px 20px;" type="button"><a routerLink="/register">Únete ahora</a></button>
     </div>
   </div>
 </div>
 
-<div class="p-10" style="background-color: #2C5AA5">
-  <div class="flex justify-between items-center">
-    <h1 class="font-bold text-white" style="font-size: 55px">#ILOVETRAVEL</h1>
-    <div class="flex">
-      <button class="bg-blue-500 text-white py-2 px-4 rounded-full mr-2 hover:bg-blue-700 focus:outline-none focus:shadow-outline-blue active:bg-blue-800" type="button">FACEBOOK</button>
-      <button class="bg-blue-500 text-white py-2 px-4 rounded-full mr-2 hover:bg-blue-700 focus:outline-none focus:shadow-outline-blue active:bg-blue-800" type="button">TWITTER</button>
-      <button class="bg-blue-500 text-white py-2 px-4 rounded-full hover:bg-blue-700 focus:outline-none focus:shadow-outline-blue active:bg-blue-800" type="button">INSTAGRAM</button>
+<div class="p-10" style="background-color:black">
+    <div class="text-center">
+      <a class="text-sm text-white hover:text-gray-800 mx-2" href="#">Políticas de Privacidad</a><br>
+    <a class="text-sm text-white hover:text-gray-800 mx-2" href="#">
+     Política de Cookies
+    </a>
+    <p class="text-sm text-white mt-1">
+     Viajeros Sin Fronteras - Todos los derechos reservados 2024 <br> @Copyright
+    </p>
     </div>
-  </div>
+    
 </div>
 </body>
