--- a/src/app/public/sites/login/login.component.html
+++ b/src/app/public/sites/login/login.component.html
@@ -2,7 +2,6 @@
   class="h-full flex flex-row pl-72 pr-72 pt-28 pb-28 bg-gradient-to-bl from-blue-600 via-white to-yellow-400 font-thin">
   <div class="flex-1 p-8 rounded-bl-2xl rounded-tl-2xl border-solid border-gray-300 box-border bg-white h-full">
     <div class="flex justify-center">
-      <a href="#"><img class="h-12" src="./assets/logo.png"></a>
     </div><br>
     <form class="container leading-6 pl-10 pr-10">
       <div class="mb-4">
@@ -14,10 +13,10 @@
         <input type="password" id="password" class="mb-4 p-2 border border-gray-300 rounded w-full"
           placeholder="Contraseña">
         <div class="text-center">
-          <button type="button" (click)="onLoginClick()"
-            class="mb-4 p-2 text-white rounded bg-amber-400 font-semibold shadow-md w-4/12">Ingresar</button>
-          <p class="mb-2">¿No tienes una cuenta?</p>
-          <a routerLink="register" class="mb-4 text-blue-600 underline">Regístrate</a>
+          <button type="button" class="mb-4 p-2 text-white rounded bg-amber-400 font-semibold shadow-md w-4/12 hover:bg-white hover:text-black">
+            <a routerLink="/intranet/homelogueado">Ingresar</a>
+          </button>
+            <p class="mb-2">¿No tienes una cuenta? <a routerLink="/register" class="mb-4 text-blue-600 underline">Regístrate</a></p>
         </div>
       </div>
     </form>
