--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -1,7 +1,7 @@
-<nav class="bg-blue-900 p-4 flex justify-between items-center">
+<nav class="bg-teal-800 p-4 flex justify-between items-center" style="height:50px">
   <!-- Logo a la izquierda -->
   <div class="flex items-center">
-    <img src="assets/imagen.png" alt="Logo" class="h-14 w-auto mr-2" height="86" width="219" routerLink="/">
+    <img src="assets/newlogo.png" alt="Logo" class="h-14 w-auto mr-2" style="height: 36px; width: 50px" routerLink="/">
   </div>
 
   <!-- Elementos a la derecha -->
