--- a/src/app/public/sites/home/home.component.html
+++ b/src/app/public/sites/home/home.component.html
@@ -1,7 +1,7 @@
-<nav class="bg-teal-800 p-4 flex justify-between items-center" style="height:45px;">
+<nav class="bg-teal-800 p-4 flex justify-between items-center" style="height:50px">
   <!-- Logo a la izquierda -->
   <div class="flex items-center">
-    <img src="assets/newlogo.jpeg" alt="Logo" class="h-14 w-auto mr-2" style="height: 50px; width: 70px">
+    <img src="assets/newlogo.png" alt="Logo" class="h-14 w-auto mr-2" style="height: 36px; width: 50px">
   </div>
 
   <!-- Elementos a la derecha -->
@@ -202,8 +202,7 @@
      Política de Cookies
     </a>
     <p class="text-sm text-white mt-1">
-     Viajeros Sin Fronteras - Todos los derechos reservados 2024 <br> @Copyright
-    </p>
+     Viajeros Sin Fronteras - Todos los derechos reservados 2024 <br></p>
     </div>
     
 </div>
